[package]
name = "hmac-drbg"
version = "0.2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Pure Rust implementation of Hmac DRBG."
license = "Apache-2.0"
edition = "2018"

[dependencies]
digest = "0.8"
generic-array = "0.12"
hmac = "0.7"

[dev-dependencies]
sha2 = "0.8"
hex = "0.4"
typenum = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"